--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/SalvationDevelopment/Salvation-Super-Proxy#readme",
   "dependencies": {
     "dotenv": "^4.0.0",
+    "env": "0.0.2",
     "express": "^4.15.3",
     "node-php-server": "^0.1.2",
     "redbird": "^0.6.15"
