--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 [{
-  "name" : "ygosalvation",
+  "domain" : "ygosalvation",
   "url" : "http://127.0.0.1:80",
   "application" : "../salvation-server/server.js"
 },
 {
-  "name" : "YGOSalvation Forum",
-  "url" : "forum.ygopro.us",
+  "domain" : "forum.ygopro.us",
+  "url" : "http://127.0.0.1:8080",
   "application" : ""
 },
 {
-  "name" : "YGOSalvation API",
-  "url" : "http://api.ygosalvation.com",
+  "domain" : "api.ygosalvation.com",
+  "url" : "http://127.0.0.1:8081",
   "application" : ""
 },
 {
-  "name" : "YGOSalvation Main",
-  "url" : "ygopro.us",
+  "domain" : "ygopro.us",
+  "url" : "http://127.0.0.1:8082",
   "application" : ""
 }]
